syntax = "proto3";
package proto;
option go_package = "grpc/proto";

message GetDeviceReportRequest {
    string maps = 1;
    string modelId = 2;
    string featureId = 3;
}

message GetDeviceIssueRequest {
    string maps = 1;
    string deviceId = 2;
    string modelId = 3;
    string featureId = 4;
    map<string, string> values = 5;
}

message GetMQFormatRequest {
    string maps = 1;
    repeated string messages = 2;
}

message GetDeviceReportResponse {
    repeated string messages = 1;
}

message GetDeviceIssueResponse {
    repeated string inputMessages = 1;
    repeated string outputMessages = 2;
    string issueTopic = 3;
    string issueResponseTopic = 4;
}

message GetMQFormatResponse {
    string routingKey = 1;
    bytes rabbitMQMsgBody = 2;
}

service Converter {
    rpc ConvertReportMessage2Devices(GetDeviceReportRequest) returns (GetDeviceReportResponse);
    rpc	ConvertIssueMessage2Device(GetDeviceIssueRequest) returns (GetDeviceIssueResponse);
    rpc	ConvertDeviceMessages2MQFormat(GetMQFormatRequest) returns (GetMQFormatResponse);
}
